--- a/index.html
+++ b/index.html
@@ -3,45 +3,21 @@
 <head>
 	<title>Styleguide</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="css/styleguide.css">
 	<script src="http://files.keyes.ie/things/baseliner/baseliner-latest.min.js"> // http://keyes.ie/things/baseliner/
 	</script>
 	<script>
 		window.onload = function() {
-		    baseliner = new Baseliner({ gridHeight: 6, gridColor: 'red', gridOffset: 1, gridOpacity: 20});
+		    baseliner = new Baseliner({ gridHeight: 6, gridColor: 'red', gridOffset: 0, gridOpacity: 20});
 	}
 	</script>
 </head>
 
 <body>
 
-<!-- 	<nav id="top-nav">
-		<a href="">panjiva</a>
-		<form>
-			<input>
-			<button>Search</button>
-		</form>
-		<ul>
-			<li>English</li>
-			<li>Sally Sullivan</li>
-		</ul>
-	</nav>
-
-	<nav id="side-nav">
-		<ul>
-			<li>Home</li>
-			<li>Grid</li>
-			<li>Typography</li>
-			<li>Color</li>
-			<li>Forms</li>
-			<li>Navigation</li>
-			<li>Feedback</li>
-			<li>Misc</li>
-		</ul>
-	</nav> -->
-
 
 	<div id="wrap">
-		<div id="mainNav">
+		<nav id="mainNav">
 			<a class="logo img" href=""><img src="img/panjivalogovectorized-white.png" alt="panjiva logo"></a>
 			<span class="search">
 				<input type="text" placeholder="Enter a company or product">
@@ -52,10 +28,9 @@
 				<li><a href="">English<span class="panjiva-icon-down icon"></span></a></li>
 				<li><a href="">Sally Sullivan<span class="panjiva-icon-down icon"></span></a></li>
 			</ul>
-
-		</div>
-			<ul id="sideNav" class="normal">
-				<li class=""><span class="panjiva-icon-home icon"></span><a href="">Styleguide</a></li>
+		</nav>
+		<ul id="sideNav" class="normal">
+				<li class=""><span class="panjiva-icon-home icon"></span><a href="">Top</a></li>
 				<li><a href="">Grid</a></li>
 				<li><a href="">Typography</a></li>
 				<li><a href="">Color</a></li>
@@ -64,21 +39,28 @@
 				<li><a href="">Feedback</a></li>
 				<li><a href="">Icons</a></li>
 				<li><a href="">Miscelleous</a></li>
-			</ul>
+		</ul>
+
 		<div id="content">
 			<h1>Styleguide</h1>
-			<p>The Panjiva styleguide is to here to help us look better and be more consistent.</p>
-
-			<h2>Typography</h2>
-			<h1 class="h0">Marketing page headline. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
-			<h1>Page title. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
-			<h2>Subheading. Lorem ipsum dolor sit amet, consectetur adipisicing elit,</h2>
-			<h3>Section header. Lorem ipsum dolor sit amet, consectetur adipisicing elit,</h3>
-			<h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h4>
-			<p class="xlarge">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-			<p class="large">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<b>Bolded text is in Helvetica Neue Medium.</b> <a>This is a link.</a></p>
-			<p class="small">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<b>Bolded text is in Helvetica Neue Medium.</b> <a>This is a link.</a></p>
+			<div id="typography" class="section">
+				<h2>Typography</h2>
+				<h1 class="h0">H0 Marketing headline</h1>
+				<h1>H1 headline</h1>
+				<h2>H2 subheadline</h2>
+				<h3>H3 section header</h3>
+				<p class="xlarge">Xlarge text. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				<p class="large"> Large text. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				<p> Normal text. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<b>Bolded text is in Helvetica Neue Medium.</b> <a>This is a link.</a></p>
+			</div>
+			<div id="color" class="section">
+				<div class="swatch">#ECF0F1</div>
+				<div class="swatch">#BDC3C7</div>
+				<div class="swatch">#95A5A6</div>
+				<div class="swatch">#7F8C8D</div>
+				<div class="swatch">#34495E</div>
+				<div class="swatch">#2C3E50</div>
+			</div>
 		</div>
 
 	</div>
