--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<li><a href="#grid">Grid</a></li>
 				<li><a href="#typography">Typography</a></li>
 				<li><a href="#color">Color</a></li>
-				<li><a href="">Forms</a></li>
+				<li><a href="#forms">Forms</a></li>
 				<li><a href="">Navigation</a></li>
 				<li><a href="">Feedback</a></li>
 				<li><a href="">Icons</a></li>
@@ -103,7 +103,6 @@
 						<p>size1of8</p>
 					</div>
 				</div>
-
 			</div>
 			<div class="section">
 				<a name="typography"></a>
@@ -120,71 +119,76 @@
 				<a name="color"></a>
 				<h2>Color</h2>
 				<div class="line">
-					<div class="unit size1of4" style="background-color:#ECF0F1">
-						<span class="swatch">$gray1<br />#ECF0F1</span>
+					<div class="unit size1of4">
+						<span class="swatch" style="background-color:#ECF0F1">$gray1<br />#ECF0F1</span>
 					</div>
-					<div class="unit size1of4" style="background-color:#BDC3C7">
-						<span class="swatch">$gray2<br />#BDC3C7</span>
+					<div class="unit size1of4">
+						<span class="swatch" style="background-color:#BDC3C7">$gray2<br />#BDC3C7</span>
 					</div>
-					<div class="unit size1of4" style="background-color:#95A5A6">
-						<span class="swatch">$gray3<br />#95A5A6</span>
+					<div class="unit size1of4">
+						<span class="swatch" style="background-color:#95A5A6">$gray3<br />#95A5A6</span>
 					</div>
-					<div class="unit size1of4" style="background-color:#7F8C8D; color:white">
-						<span class="swatch">$gray4<br />#7F8C8D</span>
+					<div class="unit size1of4">
+						<span class="swatch" style="background-color:#7F8C8D; color:white">$gray4<br />#7F8C8D</span>
 					</div>
-					<div class="unit size1of4" style="background-color:#34495E; color:white">
-						<span class="swatch">$gray5<br />#34495E</span>
+					<div class="unit size1of4">
+						<span class="swatch" style="background-color:#34495E; color:white">$gray5<br />#34495E</span>
 					</div>
-					<div class="unit size1of4" style="background-color:#2C3E50; color:white">
-						<span class="swatch">$gray6<br />#2C3E50</span>
+					<div class="unit size1of4">
+						<span class="swatch" style="background-color:#2C3E50; color:white">$gray6<br />#2C3E50</span>
 					</div>
-					<div class="unit size1of4" style="background-color:#15BDED; color:white">
-						<span class="swatch">$blueLight<br />#15BDED</span>
+					<div class="unit size1of4">
+						<span class="swatch" style="background-color:#15BDED; color:white">$blueLight<br />#15BDED</span>
 					</div>
-					<div class="unit size1of4" style="background-color:#00A1CF; color:white">
-						<span class="swatch">$blueDark<br />#00A1CF</span>
+					<div class="unit size1of4">
+						<span class="swatch" style="background-color:#00A1CF; color:white">$blueDark<br />#00A1CF</span>
 					</div>
-					<div class="unit size1of4" style="background-color:#2ECC71; color:white">
-						<span class="swatch">$greenLight<br />#2ECC71</span>
+					<div class="unit size1of4">
+						<span class="swatch" style="background-color:#2ECC71; color:white">$greenLight<br />#2ECC71</span>
 					</div>
-					<div class="unit size1of4" style="background-color:#27AE60; color:white">
-						<span class="swatch">$greenDark<br />#27AE60</span>
+					<div class="unit size1of4">
+						<span class="swatch" style="background-color:#27AE60; color:white">$greenDark<br />#27AE60</span>
 					</div>
-					<div class="unit size1of4" style="background-color:#F1C40F; color:white">
-						<span class="swatch">$yellowLight<br />#F1C40F</span>
+					<div class="unit size1of4">
+						<span class="swatch" style="background-color:#F1C40F; color:white">$yellowLight<br />#F1C40F</span>
 					</div>
-					<div class="unit size1of4" style="background-color:#F39C12; color:white">
-						<span class="swatch">$yellowDark<br />#F39C12</span>
+					<div class="unit size1of4">
+						<span class="swatch" style="background-color:#F39C12; color:white">$yellowDark<br />#F39C12</span>
 					</div>
-					<div class="unit size1of4" style="background-color:#E67E22; color:white">
-						<span class="swatch">$orangeLight<br />#E67E22</span>
+					<div class="unit size1of4">
+						<span class="swatch" style="background-color:#E67E22; color:white">$orangeLight<br />#E67E22</span>
 					</div>
-					<div class="unit size1of4" style="background-color:#D35400; color:white">
-						<span class="swatch">$yellowDark<br />#D35400</span>
+					<div class="unit size1of4">
+						<span class="swatch" style="background-color:#D35400; color:white">$yellowDark<br />#D35400</span>
 					</div>
-					<div class="unit size1of4" style="background-color:#E74C3C; color:white">
-						<span class="swatch">$redLight<br />#E74C3C</span>
+					<div class="unit size1of4">
+						<span class="swatch" style="background-color:#E74C3C; color:white">$redLight<br />#E74C3C</span>
 					</div>
-					<div class="unit size1of4" style="background-color:#C0392B; color:white">
-						<span class="swatch">$redDark<br />#C0392B</span>
+					<div class="unit size1of4">
+						<span class="swatch" style="background-color:#C0392B; color:white">$redDark<br />#C0392B</span>
 					</div>
-					<div class="unit size1of4" style="background-color:#9B59B6; color:white">
-						<span class="swatch">$purpleLight<br />#9B59B6</span>
+					<div class="unit size1of4">
+						<span class="swatch" style="background-color:#9B59B6; color:white">$purpleLight<br />#9B59B6</span>
 					</div>
-					<div class="unit size1of4" style="background-color:#8E44AD; color:white">
-						<span class="swatch">$purpleDark<br />#8E44AD</span>
-					</div>
+					<div class="unit size1of4">
+						<span class="swatch" style="background-color:#8E44AD; color:white">$purpleDark<br />#8E44AD</span>
 					</div>
 				</div>
 				
 				<div>Tint color by adding white and shade colors by adding black. This keeps our color scheme consistent. With Sass this is done with <code>darken($color, 20%)</code> and <code>lighter($color, 20%)</code></div>
 			</div>
 			<div class="section">
-	
+				<a name="forms"></a>
+				<h2>Forms</h2>
+				<button>Default</button>
+				<button class="buttonPrimary">Primary</button>
+				<button disabled>Disabled</button>
+				<button>Icon</button>
+				<button class="buttonLink">Button link</button>
 			</div>
-		</div>
+		</div> <!-- #content -->
 
-	</div>
+	</div> <!-- #wrap -->
 
 	<!-- Baseline stuff  -->
 	<script src="http://files.keyes.ie/things/baseliner/baseliner-latest.min.js"></script>
