correction to yellow dark

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 						<span class="swatch" style="background-color:#E67E22; color:white">$orangeLight<br />#E67E22</span>
 					</div>
 					<div class="unit size1of4">
-						<span class="swatch" style="background-color:#D35400; color:white">$yellowDark<br />#D35400</span>
+						<span class="swatch" style="background-color:#D35400; color:white">$orangeDark<br />#D35400</span>
 					</div>
 					<div class="unit size1of4">
 						<span class="swatch" style="background-color:#E74C3C; color:white">$redLight<br />#E74C3C</span>
