icon update to correct sizes

--- a/index.html
+++ b/index.html
@@ -282,8 +282,17 @@
 				<span class="panjiva-icon-right-double"></span>
 				<span class="panjiva-icon-download"></span>
 				<span class="panjiva-icon-upload"></span>
-				
-				
+				<span class="panjiva-icon-rss"></span>
+				<span class="panjiva-icon-facebook"></span>
+				<span class="panjiva-icon-wechat"></span>
+				<span class="panjiva-icon-twitter"></span>
+				<span class="panjiva-icon-video"></span>
+				<span class="panjiva-icon-google-plus"></span>
+				<span class="panjiva-icon-linkedin"></span>
+				<span class="panjiva-icon-weibo"></span>
+				<span class="panjiva-icon-renren"></span>
+				<span class="panjiva-icon-baidu"></span>
+				<span class="panjiva-icon-qzone"></span>
 			</div>
 
 		</div> <!-- #content -->
