settings page set up

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<a name="grid"></a>
 				<h2>Grid</h2>
 				<div class="line">
-					<div class="unit size1of1">
+					<div class="unit size1of1 lastUnit">
 						<p>size1of1</p>
 					</div>
 				</div>
