settings page rough draft

--- a/settings.html
+++ b/settings.html
@@ -21,52 +21,51 @@
 			</ul>
 		</nav>
 		<ul id="sideNav">
-				<li class=""><span class="panjiva-icon-home icon"></span><a href="#top">Top</a></li>
-				<li><a href="#grid">Grid</a></li>
-				<li><a href="#typography">Typography</a></li>
-				<li><a href="#color">Color</a></li>
-				<li><a href="#forms">Forms</a></li>
-				<li><a href="">Navigation</a></li>
-				<li><a href="">Feedback</a></li>
-				<li><a href="">Icons</a></li>
-				<li><a href="">Miscelleous</a></li>
+				<li class=""><a href="#top"><span class="panjiva-icon-home icon"></span>Dashboard</a></li>
+				<li><a href=""><span class="panjiva-icon-star icon"></span>Favorites</a></li>
+				<li><a href=""><span class="panjiva-icon-folder icon"></span>Group</a></li>
+				<li><a href=""><span class="panjiva-icon-mail icon"></span>Inbox</a></li>
+				<li><a href=""><span class="panjiva-icon-download icon"></span>Exports</a></li>
+				<li><a href=""><span class="panjiva-icon-graph icon"></span>Trends</a></li>
+				<li><a href="">Help</a></li>
+				<li><a href="">More</a></li>
 		</ul>
 
 		<div id="content">
 			<h1>Settings</h1>
-			<ul class="tab">
-				<li class="active">Account</li>
-				<li>Profile</li>
-				<li>Order History</li>
+			<ul class="localNav">
+				<li class="active"><a href="">Account</a></li>
+				<li><a href="">Profile</a></li>
+				<li><a href="">Order History</a></li>
 			</ul>
-			<h2>Usage</h2>
-			<h3>Past month</h3>
+			<h3>Usage</h3>
+			<h4>Past month</h4>
 			<div class="line">
 				<div class="unit size1of3">
-					<p>Profile views: 120/200</p>
+					<p>Profile views: 35/50</p>
 				</div>
 				<div class="unit size2of3 lastUnit">
-					<p>50%</p>
+					<progress value="35" max="50"></progress>
 				</div>
 			</div>
 			<div class="line">
 				<div class="unit size1of3">
-					<p>Shipment searches: 120/200</p>
+					<p>Shipment searches: 49/50</p>
 				</div>
 				<div class="unit size2of3 lastUnit">
-					<p>50%</p>
+					<progress value="49" max="50"></progress>
 				</div>
 			</div>
 			<div class="line">
 				<div class="unit size1of3">
-					<p>Exports: 120/200</p>
+					<p>Exports: 1000/1000</p>
 				</div>
 				<div class="unit size2of3 lastUnit">
-					<p>50%</p>
+					<progress value="1000" max="1000"></progress>
 				</div>
 			</div>
 
-			<h2>Users</h2>
+			<h3>Users</h3>
 			<p>Invite as many people as you like to share your account for free.</p>
 			<ul>
 				<li>
