added help icon to panicons

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			</ul>
 		</nav>
 		<ul id="sideNav">
-				<li class=""><span class="panjiva-icon-home icon"></span><a href="#top">Top</a></li>
+				<li class=""><a href="#top"><span class="panjiva-icon-home icon"></span>Top</a></li>
 				<li><a href="#grid">Grid</a></li>
 				<li><a href="#typography">Typography</a></li>
 				<li><a href="#color">Color</a></li>
@@ -262,6 +262,7 @@
 				<span class="panjiva-icon-question-mark"></span>
 				<span class="panjiva-icon-exclamation"></span>
 				<span class="panjiva-icon-info"></span>
+				<span class="panjiva-icon-help"></span>
 				<span class="panjiva-icon-minimize"></span>
 				<span class="panjiva-icon-maximize"></span>
 				<span class="panjiva-icon-plus"></span>
