--- a/settings.html
+++ b/settings.html
@@ -27,7 +27,7 @@
 				<li><a href=""><span class="panjiva-icon-mail icon"></span>Inbox</a></li>
 				<li><a href=""><span class="panjiva-icon-download icon"></span>Exports</a></li>
 				<li><a href=""><span class="panjiva-icon-graph icon"></span>Trends</a></li>
-				<li><a href="">Help</a></li>
+				<li><a href=""><span class="panjiva-icon-help icon"></span>Help</a></li>
 				<li><a href="">More</a></li>
 		</ul>
 
