--- a/settings.html
+++ b/settings.html
@@ -67,76 +67,57 @@
 
 			<h3>Users</h3>
 			<p>Invite as many people as you like to share your account for free.</p>
-			<ul>
-				<li>
-					<div class="line">
-						<div class="unit size1of3">
-							<span>Image</span> Sally Sullivan (me)
-						</div>
-						<div class="unit size1of3">
-							ssullivan@furniture.com
-						</div>
-						<div class="unit size1of8">
-							<label><input type="checkbox" name="vehicle" value="admin" checked disabled> Admin [?]</label>
-						</div>
-						<div class="unit size1of8 lastUnit">
-							<a href="">Remove user</a>
-						</div>
-					</div>
-				</li>
-				<li>
-					<div class="line">
-						<div class="unit size1of3">
-							<span>Image</span> Alex Subotnick
-						</div>
-						<div class="unit size1of3">
-							asubotnick@furniture.com
-						</div>
-						<div class="unit size1of8">
-							<label><input type="checkbox" name="vehicle" value="admin"> Admin [?]</label>
-						</div>
-						<div class="unit size1of8 lastUnit">
-							<a href="">Remove user</a>
-						</div>
-					</div>
-				</li>
-				<li>
-					<div class="line">
-						<div class="unit size1of3">
-							<span>Image</span> Amy Zhang
-						</div>
-						<div class="unit size1of3">
-							yzhang@furniture.com
-						</div>
-						<div class="unit size1of8">
-							<label><input type="checkbox" name="vehicle" value="admin"> Admin [?]</label>
-						</div>
-						<div class="unit size1of8 lastUnit">
-							<a href="">Remove user</a>
-						</div>
-					</div>
-				</li>
-				<li class="focus">
-					<div class="line">
-						<div class="unit size1of1">
-							<span>Image</span>
-							<fieldset>
-								<label for="inputFirstName">First name</label>
-								<input type="text" placeholder="" id="inputFirstName">
-							</fieldset>
-							<fieldset>
-								<label for="inputFirstName">Last name</label>
-								<input type="text" placeholder="" id="inputFirstName">
-							</fieldset>
-							<fieldset>
-								<label for="inputFirstName">Email</label>
-								<input type="text" placeholder="" id="inputFirstName">
-							</fieldset>
-							<p><button>Invite User</button><span>It's free!</span></p>
-						</div>
-					</div>
-				</li>
-			</ul>
+
+			<table>
+				<tr>
+					<td><span class="panjiva-icon-user iconBlock"></td>
+					<td>Sally Sullivan (me)</td>
+					<td>ssullivan@furniture.com</td>
+					<td><label><input type="checkbox" name="vehicle" value="admin" checked disabled> Admin [?]</label></td>
+					<td><a href="">Remove user</a></td>
+				</tr>
+				<tr>
+					<td><span class="panjiva-icon-user iconBlock"></td>
+					<td>Alex Subotnick</td>
+					<td>asubotnick@furniture.com</td>
+					<td><label><input type="checkbox" name="vehicle" value="admin"> Admin [?]</label></td>
+					<td><a href="">Remove user</a></td>
+				</tr>
+				<tr>
+					<td><span class="panjiva-icon-user iconBlock"></td>
+					<td>Amy Zhang</td>
+					<td>yzhang@furniture.com</td>
+					<td><label><input type="checkbox" name="vehicle" value="admin"> Admin [?]</label></td>
+					<td><a href="">Remove user</a></td>
+				</tr>
+				<tr class="focus">
+					<td><span class="panjiva-icon-user iconBlock disabled"></td>
+					<td>
+						<fieldset>
+							<label for="inputFirstName">First name</label>
+							<input type="text" placeholder="" id="inputFirstName">
+						</fieldset>
+					</td>
+					<td>
+						<fieldset>
+							<label for="inputFirstName">Last name</label>
+							<input type="text" placeholder="" id="inputFirstName">
+						</fieldset>
+					</td>
+					<td>
+						<fieldset>
+							<label for="inputFirstName">Email</label>
+							<input type="text" placeholder="" id="inputFirstName">
+						</fieldset>
+					</td>
+					<td>
+						<fieldset>
+							<span class="label">It's free!</span><br>
+							<button>Invite User</button>
+						</fieldset>
+					</td>
+				</tr>
+			</table>
 		</div> <!-- #content end-->
 
 	</div> <!-- #wrap end-->
