--- a/index.html
+++ b/index.html
@@ -261,12 +261,10 @@
 				<li><a href="">Order History</a></li>
 			</ul>
 			<pre>
-				&lt;a name="navigation"&gt;&lt;/a&gt;<br />
-				&lt;h2&gt;Navigation&lt;/h2&gt;<br />
 				&lt;ul class="localNav"&gt;<br />
 				&nbsp;&nbsp;&lt;li class="active"&gt;&lt;a href=""&gt;Account&lt;/a&gt;&lt;/li&gt;<br />
 				&nbsp;&nbsp;&lt;li&gt;&lt;a href=""&gt;Profile&lt;/a&gt;&lt;/li&gt;<br />
-				&nbsp;&nbsp;&lt;li&gt;&lt;a href=""&gt;Order History&lt;/a&gt;&lt;/li&gt;
+				&nbsp;&nbsp;&lt;li&gt;&lt;a href=""&gt;Order History&lt;/a&gt;&lt;/li&gt;<br />
 				&lt;/ul&gt;
 			</pre>
 			</div>
@@ -699,6 +697,10 @@
 				<div class="line">
 					<div class="unit size1of4">
 						<span class="icon panjiva-icon-qzone"></span> panjiva-icon-qzone
+					</div>
+
+					<div class="unit size1of4">
+						<span class="icon panjiva-icon-bell"></span> panjiva-icon-bell
 					</div>
 				</div>
 				<h3>Icon block</h3>
